    * generic/tclBasic.c    tcl*ConstStubs, it's not necessary at all.
    * generic/tclOO.c
    * generic/tclTomMathInterface.c
    * generic/tclStubInit.c (regenerated)
    * generic/tclOOStubInit.c (regenerated)
    * generic/tclEnsemble.c Fix signed-unsigned mismatch
    * win/tclWinInt.h       make tclWinProcs "const"
    * win/tclWin32Dll.c
    * win/tclWinFCmd.c
    * win/tclWinFile.c
    * win/tclWinLoad.c
    * win/tclWinPipe.c
    * win/tclWinSerial.c
    * win/.cvsignore
    * compat/unicows/readme.txt   Add first part of mslu support
    * compat/unicows/license.txt  See [Feature Request #2819611]
    * compat/unicows/unicows.lib

2010-02-15  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOO.c (AllocObject, SquelchedNsFirst, ObjectRenamedTrace):
	* generic/tclNamesp.c (Tcl_DeleteNamespace): [Bug 2950259]: Revised
	the namespace deletion code to provide an additional internal callback
	that gets triggered early enough in namespace deletion to allow TclOO
	destructors to run sanely. Adjusted TclOO to take advantage of this,
	so making tearing down an object by killing its namespace appear to
	work seamlessly, which is needed for Itcl. (Note that this is not a
	feature that will ever be backported to 8.5, and it remains not a
	recommended way of deleting an object.)

2010-02-13  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCompCmds.c (TclCompileSwitchCmd): Divided the [switch]
	compiler into three pieces (after the model of [try]): a parser, an
	instruction-issuer for chained tests, and an instruction-issuer for
	jump tables.

	* generic/tclEnsemble.c: Split the ensemble engine out into its own
	file rather than keeping it mashed together with the namespace code.

2010-02-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:		Use -pipe for gcc on win32
	* win/configure:	(mingw/cygwin) (regenerated)
	* win/.cvsignore:	Add .lib, .exp and .res here

2010-02-11  Mo DeJong  <mdejong@users.sourceforge.net>
